# COSC-363-RayTracing

Code/: CMakeLists.txt  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Plane.cpp  RayTracer.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp
